discussion/kv_engine/173424/173424_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Refactor timingLogs to use a smart pointer

Instead of passing around raw pointers, use a
smart shared_ptr and remove the destructor
containing explicit deletion.

Change-Id: I4d3d59dc2d77256c41ae3e8ed38445cdf8da587c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 14:14:53.000000000
Message: 
Patch Set 2: Published edit on patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 14:41:05.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45075/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(605): error C2679: binary "=": no operator found which takes a right-hand operand of type "std::shared_ptr<std::ostream>" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45075/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37863/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37863/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16480/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:605:39: error: no viable overloaded "=" [clang-diagnostic-error]
                    epStats.timingLog = tmp;
                                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:371:19: note: candidate function not viable: no known conversion from "std::shared_ptr<std::ostream>" (aka "shared_ptr<basic_ostream<char> >") to "std::unique_ptr<std::basic_ostream<char>, std::default_delete<std::basic_ostream<char> > >" for 1st argument
      unique_ptr& operator=(unique_ptr&&) = default;
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:395:7: note: candidate function not viable: no known conversion from "std::shared_ptr<std::ostream>" (aka "shared_ptr<basic_ostream<char> >") to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      operator=(nullptr_t) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:469:19: note: candidate function not viable: no known conversion from "std::shared_ptr<std::ostream>" (aka "shared_ptr<basic_ostream<char> >") to "const std::unique_ptr<std::basic_ostream<char>, std::default_delete<std::basic_ostream<char> > >" for 1st argument
      unique_ptr& operator=(const unique_ptr&) = delete;
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:386:2: note: candidate template ignored: could not match "unique_ptr" against "shared_ptr"
        operator=(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16480/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19282/ : FAILURE

Compile error at [2022-04-07T14:33:33.184Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19282/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18587/ : FAILURE

Compile error at [2022-04-07T14:33:42.038Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:605:41:
error: no match for ?operator=? (operand types are ?std::unique_ptr<std::basic_ostream<char> >? and ?std::shared_ptr<std::basic_ostream<char> >?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18587/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26661/ : FAILURE

Compile error at [2022-04-07T14:36:01.166Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26661/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6134/ : FAILURE

Compile error at [2022-04-07T14:33:04.585Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17346/ : FAILURE

Compile error at [2022-04-07T14:19:11.769Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17346/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6194/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18251/ : FAILURE

Compile error at [2022-04-07T14:35:36.954Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:605:41:
error: no match for ?operator=? (operand types are ?std::unique_ptr<std::basic_ostream<char> >? and ?std::shared_ptr<std::basic_ostream<char> >?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18251/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15415/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
